--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "author": "Timothy Gu <timothygu99@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^3.4.6"
+    "bluebird": "^3.4.6",
+    "aws-sdk": "=2.1.29"
   },
   "devDependencies": {
-    "aws-sdk": "^2.1.29",
     "babel-cli": "^6.16.0",
     "babel-preset-es2015-node4": "^2.1.0",
     "babel-preset-es2017": "^6.16.0"
